Fix font size on mobile

--- a/components/MenuItems/Submenu.module.scss
+++ b/components/MenuItems/Submenu.module.scss
@@ -2,7 +2,7 @@
   margin-left: 24px;
 
   a {
-    font-size: 28px;
+    font-size: 36px;
     position: relative;
   }
 
